@@ -14,6 +14,8 @@ v 8.4.0 (unreleased)
   - Revert back upvote and downvote button to the issue and MR pages
   - Swap position of Assignee and Author selector on Issuables (Zeger-Jan van de Weg)
   - Fix version check image in Safari
+  - Enable "Add key" button when user fills in a proper key (Stan Hu)
+  - Show 'All' tab by default in the builds page
 
 v 8.3.3 (unreleased)
   - Fix project transfer e-mail sending incorrect paths in e-mail notification (Stan Hu)
